--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,12 @@
-
-
-
-
-
-
-
 nltk==3.8.1
 pandas==2.1.0
 pickleshare==0.7.5
-
-
-
 scikit-learn==1.3.0
 scipy==1.11.2
-
 streamlit==1.27.0
 streamlit-chat==0.1.1
-
+os
+string
 
 
 
